--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,11 @@ form {
     padding: 5px 0px;
 }
 
+footer{
+    font-size: 12px;
+        color: black;
+}
+
 .btn {
     width: 110px;
 }
@@ -77,4 +82,7 @@ form {
     margin: 20px auto;
     border-radius: 10px;
     max-width: 800px;
+}
+#footer-link{
+    font-size: 12px;
 }
